--- a/github.html
+++ b/github.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>github</title>
-    <link rel="stylesheet" href="/estilos/links.css">
+    <link rel="stylesheet" href="estilos/links.css">
 </head>
 <body>
     
@@ -15,3 +15,5 @@
 
 </body>
 </html>
+
+
